<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_category_general">
        <ListPreference
            android:key="theme"
            android:title="@string/pref_theme_title"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="system" />
        <SeekBarPreference
            android:key="keyboard_height"
            android:title="@string/pref_keyboard_height_title"
            android:min="50"
            android:max="100"
            android:defaultValue="80" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_feedback">
        <SwitchPreferenceCompat
            android:key="haptic_feedback"
            android:title="@string/pref_haptic_title"
            android:defaultValue="true" />
        <SwitchPreferenceCompat
            android:key="sound_feedback"
            android:title="@string/pref_sound_title"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_input">
        <Preference
            android:key="schema"
            android:title="@string/pref_schema_title" />
        <Preference
            android:key="user_dict"
            android:title="@string/pref_user_dict_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_privacy">
        <SwitchPreferenceCompat
            android:key="cloud_sync"
            android:title="@string/pref_cloud_sync_title"
            android:summary="@string/pref_cloud_sync_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>
